# syke-pic

./: pyproject.toml
requirements/: conda.yml
sykepic/: __main__.py
sykepic/compute/: feature_python.py
sykepic/train/: data.py
