[project]
name = "syke-pic"
version = "0.3.0"
description = "Plankton image classification with neural networks"
readme = "README.md"
requires-python = ">=3.9, <3.10"
authors = [
    { name = "Otso Velhonoja", email = "otso.velhonoja@syke.fi" }
]
license = { text = "MIT" }
dependencies = [
    "ifcb-features@git+https://github.com/veot/ifcb-features",
    "matplotlib>=3.6.3",
    "numpy<1.20",
    "opencv-python-headless>=4.5.4.60",
    "pandas>=1.3.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.3.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/sykefi/syke-pic"

[project.scripts]
sykepic = "sykepic.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sykepic"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ifcb-features = { git = "https://github.com/veot/ifcb-features" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
